--- a/experimental_ble_app_eddystone/ruuvitag_b3/s132/armgcc/Makefile
+++ b/experimental_ble_app_eddystone/ruuvitag_b3/s132/armgcc/Makefile
@@ -1,133 +1,167 @@
 PROJECT_NAME := experimental_ble_app_eddystone_s132_ruuvitag_b3
+TARGETS          := ruuvitag_b3_eddystone
+OUTPUT_DIRECTORY := _build
 
-export OUTPUT_FILENAME
-#MAKEFILE_NAME := $(CURDIR)/$(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))
-MAKEFILE_NAME := $(MAKEFILE_LIST)
-MAKEFILE_DIR := $(dir $(MAKEFILE_NAME) ) 
-SDK = ../../../../nRF5_SDK_11.0.0_89a8197
+SDK_ROOT := $(abspath ../../../../nRF5_SDK_12.0.0_12f24da)
+PROJ_DIR := $(abspath ../../..)
 
-TEMPLATE_PATH = $(SDK)/components/toolchain/gcc
-ifeq ($(OS),Windows_NT)
-include $(TEMPLATE_PATH)/Makefile.windows
-else
-include $(TEMPLATE_PATH)/Makefile.posix
-endif
-
-MK := mkdir
-RM := rm -rf
-
-#echo suspend
-ifeq ("$(VERBOSE)","1")
-NO_ECHO := 
-else
-NO_ECHO := @
-endif
-
-# Toolchain commands
-CC              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-gcc'
-AS              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-as'
-AR              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ar' -r
-LD              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ld'
-NM              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-nm'
-OBJDUMP         := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objdump'
-OBJCOPY         := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objcopy'
-SIZE            := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-size'
-
-#function for removing duplicates in a list
-remduplicates = $(strip $(if $1,$(firstword $1) $(call remduplicates,$(filter-out $(firstword $1),$1))))
-
+$(OUTPUT_DIRECTORY)/ruuvitag_b3_eddystone.out: \
+  LINKER_SCRIPT=experimental_ble_app_eddystone_gcc_nrf52.ld
 #source common to all targets
-C_SOURCE_FILES += \
-$(SDK)/components/libraries/button/app_button.c \
-$(SDK)/components/libraries/util/app_error.c \
-$(SDK)/components/libraries/util/app_error_weak.c \
-$(SDK)/components/libraries/timer/app_timer.c \
-$(SDK)/components/libraries/util/app_util_platform.c \
-$(SDK)/components/libraries/util/nrf_assert.c \
-$(SDK)/components/libraries/util/nrf_log.c \
-$(SDK)/components/libraries/uart/retarget.c \
-$(SDK)/external/segger_rtt/RTT_Syscalls_GCC.c \
-$(SDK)/external/segger_rtt/SEGGER_RTT.c \
-$(SDK)/external/segger_rtt/SEGGER_RTT_printf.c \
-$(SDK)/components/libraries/uart/app_uart.c \
-$(SDK)/components/drivers_nrf/delay/nrf_delay.c \
-$(SDK)/components/drivers_nrf/common/nrf_drv_common.c \
-$(SDK)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
-$(SDK)/components/drivers_nrf/uart/nrf_drv_uart.c \
-$(SDK)/components/drivers_nrf/spi_master/nrf_drv_spi.c \
-$(SDK)/examples/bsp/bsp.c \
-$(SDK)/components/ble/common/ble_advdata.c \
-$(SDK)/components/ble/common/ble_conn_params.c \
-$(SDK)/components/ble/common/ble_srv_common.c \
-$(SDK)/components/toolchain/system_nrf52.c \
-$(SDK)/components/softdevice/common/softdevice_handler/softdevice_handler.c \
-../../../main.c \
-../../../spi.c \
-../../../bme280.c \
-../../../base91.c 
-#$(SDK)/components/drivers_nrf/timer/nrf_drv_timer.c \
+SRC_FILES += \
+  $(PROJ_DIR)/main.c \
+  $(PROJ_DIR)/spi.c \
+  $(PROJ_DIR)/bme280.c \
+  $(PROJ_DIR)/base91.c \
+  $(SDK_ROOT)/components/drivers_nrf/clock/nrf_drv_clock.c \
+  $(SDK_ROOT)/components/libraries/button/app_button.c \
+  $(SDK_ROOT)/components/libraries/util/app_error.c \
+  $(SDK_ROOT)/components/libraries/util/app_error_weak.c \
+  $(SDK_ROOT)/components/libraries/timer/app_timer.c \
+  $(SDK_ROOT)/components/libraries/util/app_util_platform.c \
+  $(SDK_ROOT)/components/libraries/util/nrf_assert.c \
+  $(SDK_ROOT)/components/libraries/uart/retarget.c \
+  $(SDK_ROOT)/external/segger_rtt/RTT_Syscalls_GCC.c \
+  $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
+  $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
+  $(SDK_ROOT)/components/libraries/uart/app_uart.c \
+  $(SDK_ROOT)/components/drivers_nrf/common/nrf_drv_common.c \
+  $(SDK_ROOT)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
+  $(SDK_ROOT)/components/drivers_nrf/uart/nrf_drv_uart.c \
+  $(SDK_ROOT)/components/drivers_nrf/spi_master/nrf_drv_spi.c \
+  $(SDK_ROOT)/components/ble/common/ble_advdata.c \
+  $(SDK_ROOT)/components/ble/common/ble_conn_params.c \
+  $(SDK_ROOT)/components/ble/common/ble_srv_common.c \
+  $(SDK_ROOT)/components/toolchain/system_nrf52.c \
+  $(SDK_ROOT)/components/softdevice/common/softdevice_handler/softdevice_handler.c \
 
 #assembly files common to all targets
 ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
-#includes common to all targets
-INC_PATHS  = -I../../../../board_configs
-INC_PATHS += -I../../../config/experimental_ble_app_eddystone_s132_ruuvitag_b3
-INC_PATHS += -I../../../config
-INC_PATHS += -I$(SDK)/components/libraries/util
-INC_PATHS += -I$(SDK)/components/libraries/timer
-INC_PATHS += -I$(SDK)/components/drivers_nrf/uart
-INC_PATHS += -I$(SDK)/components/ble/common
-INC_PATHS += -I$(SDK)/components/drivers_nrf/common
-INC_PATHS += -I$(SDK)/components/drivers_nrf/config
-INC_PATHS += -I$(SDK)/components/drivers_nrf/gpiote
-INC_PATHS += -I$(SDK)/external/segger_rtt
-INC_PATHS += -I$(SDK)/examples/bsp
-INC_PATHS += -I$(SDK)/components/toolchain/gcc
-INC_PATHS += -I$(SDK)/components/softdevice/s132/headers
-INC_PATHS += -I$(SDK)/components/libraries/uart
-INC_PATHS += -I$(SDK)/components/device
-INC_PATHS += -I$(SDK)/components/softdevice/common/softdevice_handler
-INC_PATHS += -I$(SDK)/components/toolchain/CMSIS/Include
-INC_PATHS += -I$(SDK)/components/drivers_nrf/delay
-INC_PATHS += -I$(SDK)/components/softdevice/s132/headers/nrf52
-INC_PATHS += -I$(SDK)/components/toolchain
-INC_PATHS += -I$(SDK)/components/drivers_nrf/hal
-INC_PATHS += -I$(SDK)/components/libraries/button
-INC_PATHS += -I$(SDK)/components/drivers_nrf/spi_master
-#INC_PATHS += -I$(SDK)/components/drivers_nrf/timer
+# Include folders common to all targets
+INC_FOLDERS += \
+  $(PROJ_DIR)/config \
+  $(PROJ_DIR)/../bsp \
+  $(SDK_ROOT)/components/drivers_nrf/comp \
+  $(SDK_ROOT)/components/drivers_nrf/twi_master \
+  $(SDK_ROOT)/components/ble/ble_services/ble_ancs_c \
+  $(SDK_ROOT)/components/ble/ble_services/ble_ias_c \
+  $(SDK_ROOT)/components/libraries/pwm \
+  $(SDK_ROOT)/components/softdevice/s132/headers/nrf52 \
+  $(SDK_ROOT)/components/libraries/log \
+  $(SDK_ROOT)/components/ble/ble_services/ble_gls \
+  $(SDK_ROOT)/components/libraries/fstorage \
+  $(SDK_ROOT)/components/drivers_nrf/i2s \
+  $(SDK_ROOT)/components/drivers_nrf/gpiote \
+  $(SDK_ROOT)/components/libraries/fifo \
+  $(SDK_ROOT)/components/drivers_nrf/common \
+  $(SDK_ROOT)/components/ble/ble_advertising \
+  $(SDK_ROOT)/components/drivers_nrf/adc \
+  $(SDK_ROOT)/components/ble/ble_services/ble_bas_c \
+  $(SDK_ROOT)/components/ble/ble_services/ble_hrs_c \
+  $(SDK_ROOT)/components/ble/ble_dtm \
+  $(SDK_ROOT)/components/libraries/crc16 \
+  $(SDK_ROOT)/components/libraries/mailbox \
+  $(SDK_ROOT)/components/ble/ble_services/ble_rscs_c \
+  $(SDK_ROOT)/components/drivers_nrf/uart \
+  $(SDK_ROOT)/components/ble/common \
+  $(SDK_ROOT)/components/ble/ble_services/ble_lls \
+  $(SDK_ROOT)/components/drivers_nrf/wdt \
+  $(SDK_ROOT)/components/ble/ble_services/ble_bas \
+  $(SDK_ROOT)/components/libraries/experimental_section_vars \
+  $(SDK_ROOT)/components/softdevice/s132/headers \
+  $(SDK_ROOT)/components/ble/ble_services/ble_ans_c \
+  $(SDK_ROOT)/components/libraries/slip \
+  $(SDK_ROOT)/components/libraries/mem_manager \
+  $(SDK_ROOT)/external/segger_rtt \
+  $(SDK_ROOT)/components/drivers_nrf/hal \
+  $(SDK_ROOT)/components/ble/ble_services/ble_nus_c \
+  $(SDK_ROOT)/components/drivers_nrf/rtc \
+  $(SDK_ROOT)/components/ble/ble_services/ble_ias \
+  $(SDK_ROOT)/components/drivers_nrf/ppi \
+  $(SDK_ROOT)/components/ble/ble_services/ble_dfu \
+  $(SDK_ROOT)/components/drivers_nrf/twis_slave \
+  $(SDK_ROOT)/components \
+  $(SDK_ROOT)/components/libraries/scheduler \
+  $(SDK_ROOT)/components/ble/ble_services/ble_lbs \
+  $(SDK_ROOT)/components/ble/ble_services/ble_hts \
+  $(SDK_ROOT)/components/drivers_nrf/delay \
+  $(SDK_ROOT)/components/toolchain/cmsis/include \
+  $(SDK_ROOT)/components/drivers_nrf/timer \
+  $(SDK_ROOT)/components/libraries/util \
+  $(SDK_ROOT)/components/drivers_nrf/pwm \
+  $(SDK_ROOT)/components/libraries/csense_drv \
+  $(SDK_ROOT)/components/libraries/csense \
+  $(SDK_ROOT)/components/drivers_nrf/rng \
+  $(SDK_ROOT)/components/libraries/low_power_pwm \
+  $(SDK_ROOT)/components/libraries/hardfault \
+  $(SDK_ROOT)/components/ble/ble_services/ble_cscs \
+  $(SDK_ROOT)/components/libraries/uart \
+  $(SDK_ROOT)/components/libraries/hci \
+  $(SDK_ROOT)/components/drivers_nrf/spi_slave \
+  $(SDK_ROOT)/components/drivers_nrf/lpcomp \
+  $(SDK_ROOT)/components/libraries/timer \
+  $(SDK_ROOT)/components/toolchain \
+  $(SDK_ROOT)/components/libraries/led_softblink \
+  $(SDK_ROOT)/components/drivers_nrf/qdec \
+  $(SDK_ROOT)/components/ble/ble_services/ble_cts_c \
+  $(SDK_ROOT)/components/drivers_nrf/spi_master \
+  $(SDK_ROOT)/components/ble/ble_services/ble_nus \
+  $(SDK_ROOT)/components/ble/ble_services/ble_hids \
+  $(SDK_ROOT)/components/drivers_nrf/pdm \
+  $(SDK_ROOT)/components/libraries/crc32 \
+  $(SDK_ROOT)/components/ble/peer_manager \
+  $(SDK_ROOT)/components/drivers_nrf/swi \
+  $(SDK_ROOT)/components/ble/ble_services/ble_tps \
+  $(SDK_ROOT)/components/ble/ble_services/ble_dis \
+  $(SDK_ROOT)/components/device \
+  $(SDK_ROOT)/components/ble/nrf_ble_qwr \
+  $(SDK_ROOT)/components/libraries/button \
+  $(SDK_ROOT)/components/drivers_nrf/saadc \
+  $(SDK_ROOT)/components/ble/ble_services/ble_lbs_c \
+  $(SDK_ROOT)/components/ble/ble_racp \
+  $(SDK_ROOT)/components/toolchain/gcc \
+  $(SDK_ROOT)/components/libraries/fds \
+  $(SDK_ROOT)/components/libraries/twi \
+  $(SDK_ROOT)/components/drivers_nrf/clock \
+  $(SDK_ROOT)/components/ble/ble_services/ble_rscs \
+  $(SDK_ROOT)/components/softdevice/common/softdevice_handler \
+  $(SDK_ROOT)/components/ble/ble_services/ble_hrs \
+  $(SDK_ROOT)/components/libraries/log/src \
 
 OBJECT_DIRECTORY = _build
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
 OUTPUT_BINARY_DIRECTORY = $(OBJECT_DIRECTORY)
 
-# Sorting removes duplicates
-BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LISTING_DIRECTORY) )
-
 #flags common to all targets
 CFLAGS  = -DNRF_LOG_USES_UART=0
 CFLAGS += -DNRF52
-CFLAGS += -DSOFTDEVICE_PRESENT
+CFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
+CFLAGS += -DSVC_INTERFACE_CALL_AS_NORMAL_FUNCTION
 CFLAGS += -DBOARD_CUSTOM
 CFLAGS += -DBOARD_RUUVITAG_B3
+CFLAGS += -DNRF52832
+CFLAGS += -DSOFTDEVICE_PRESENT
+CFLAGS += -DS132
+CFLAGS += -DNRF_SD_BLE_API_VERSION=3
 CFLAGS += -DNRF52_PAN_12
 CFLAGS += -DNRF52_PAN_15
-CFLAGS += -DNRF52_PAN_58
-CFLAGS += -DNRF52_PAN_55
-CFLAGS += -DNRF52_PAN_54
-CFLAGS += -DNRF52_PAN_31
+CFLAGS += -DNRF52_PAN_20
 CFLAGS += -DNRF52_PAN_30
-CFLAGS += -DNRF52_PAN_51
+CFLAGS += -DNRF52_PAN_31
 CFLAGS += -DNRF52_PAN_36
+CFLAGS += -DNRF52_PAN_51
 CFLAGS += -DNRF52_PAN_53
-CFLAGS += -DS132
+CFLAGS += -DNRF52_PAN_54
+CFLAGS += -DNRF52_PAN_55
+CFLAGS += -DNRF52_PAN_58
+CFLAGS += -DNRF52_PAN_62
+CFLAGS += -DNRF52_PAN_63
+CFLAGS += -DNRF52_PAN_64
+CFLAGS += -D__HEAP_SIZE=0
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DSWI_DISABLE0
-CFLAGS += -DNRF52_PAN_20
-CFLAGS += -DNRF52_PAN_64
-CFLAGS += -DNRF52_PAN_62
-CFLAGS += -DNRF52_PAN_63
 CFLAGS += -mcpu=cortex-m4
 CFLAGS += -mthumb -mabi=aapcs --std=gnu99
 CFLAGS += -Wall -Werror -O3 -g3
@@ -135,8 +169,47 @@ CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 # keep every function in separate section. This will allow linker to dump unused functions
 CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
 CFLAGS += -fno-builtin --short-enums 
-# keep every function in separate section. This will allow linker to dump unused functions
-LDFLAGS += -Xlinker -Map=$(LISTING_DIRECTORY)/$(OUTPUT_FILENAME).map
+# generate dependency output file
+CFLAGS += -MP -MD
+
+# C++ flags common to all targets
+CXXFLAGS += \
+
+
+
+# Assembler flags
+ASMFLAGS += -DNRF_LOG_USES_UART=0
+ASMFLAGS += -x assembler-with-cpp
+ASMFLAGS += -DNRF52
+ASMFLAGS += -DNRF_DFU_SETTINGS_VERSION=1
+ASMFLAGS += -DSVC_INTERFACE_CALL_AS_NORMAL_FUNCTION
+ASMFLAGS += -DNRF52832
+ASMFLAGS += -DBOARD_CUSTOM
+ASMFLAGS += -DBOARD_RUUVITAG_B3
+ASMFLAGS += -DSOFTDEVICE_PRESENT
+ASMFLAGS += -DS132
+ASMFLAGS += -DNRF_SD_BLE_API_VERSION=3
+ASMFLAGS += -DNRF52_PAN_12
+ASMFLAGS += -DNRF52_PAN_15
+ASMFLAGS += -DNRF52_PAN_20
+ASMFLAGS += -DNRF52_PAN_30
+ASMFLAGS += -DNRF52_PAN_31
+ASMFLAGS += -DNRF52_PAN_36
+ASMFLAGS += -DNRF52_PAN_51
+ASMFLAGS += -DNRF52_PAN_53
+ASMFLAGS += -DNRF52_PAN_54
+ASMFLAGS += -DNRF52_PAN_55
+ASMFLAGS += -DNRF52_PAN_58
+ASMFLAGS += -DNRF52_PAN_62
+ASMFLAGS += -DNRF52_PAN_63
+ASMFLAGS += -DNRF52_PAN_64
+ASMFLAGS += -D__HEAP_SIZE=0
+ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
+ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
+ASMFLAGS += -DSWI_DISABLE0
+
+
+# Linker flags
 LDFLAGS += -mthumb -mabi=aapcs -L $(TEMPLATE_PATH) -T$(LINKER_SCRIPT)
 LDFLAGS += -mcpu=cortex-m4
 LDFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
@@ -145,122 +218,22 @@ LDFLAGS += -Wl,--gc-sections
 # use newlib in nano version
 LDFLAGS += --specs=nano.specs -lc -lnosys
 
-# Assembler flags
-ASMFLAGS += -DNRF_LOG_USES_UART=0
-ASMFLAGS += -x assembler-with-cpp
-ASMFLAGS += -DNRF52
-ASMFLAGS += -DSOFTDEVICE_PRESENT
-ASMFLAGS += -DBOARD_CUSTOM
-ASMFLAGS += -DBOARD_RUUVITAG_B3
-ASMFLAGS += -DNRF52_PAN_12
-ASMFLAGS += -DNRF52_PAN_15
-ASMFLAGS += -DNRF52_PAN_58
-ASMFLAGS += -DNRF52_PAN_55
-ASMFLAGS += -DNRF52_PAN_54
-ASMFLAGS += -DNRF52_PAN_31
-ASMFLAGS += -DNRF52_PAN_30
-ASMFLAGS += -DNRF52_PAN_51
-ASMFLAGS += -DNRF52_PAN_36
-ASMFLAGS += -DNRF52_PAN_53
-ASMFLAGS += -DS132
-ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
-ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
-ASMFLAGS += -DSWI_DISABLE0
-ASMFLAGS += -DNRF52_PAN_20
-ASMFLAGS += -DNRF52_PAN_64
-ASMFLAGS += -DNRF52_PAN_62
-ASMFLAGS += -DNRF52_PAN_63
-
 #default target - first one defined
 default: clean ruuvitag_b3_eddystone
 
-#building all targets
-all: clean
-	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e cleanobj
-	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e ruuvitag_b3_eddystone
-
-#target for printing all targets
+# Print all targets that can be built
 help:
 	@echo following targets are available:
-	@echo 	ruuvitag_b3_eddystone
-	@echo 	flash_softdevice
+	@echo 	ruuvitag_b3_bootloader
 
-C_SOURCE_FILE_NAMES = $(notdir $(C_SOURCE_FILES))
-C_PATHS = $(call remduplicates, $(dir $(C_SOURCE_FILES) ) )
-C_OBJECTS = $(addprefix $(OBJECT_DIRECTORY)/, $(C_SOURCE_FILE_NAMES:.c=.o) )
+TEMPLATE_PATH := $(SDK_ROOT)/components/toolchain/gcc
 
-ASM_SOURCE_FILE_NAMES = $(notdir $(ASM_SOURCE_FILES))
-ASM_PATHS = $(call remduplicates, $(dir $(ASM_SOURCE_FILES) ))
-ASM_OBJECTS = $(addprefix $(OBJECT_DIRECTORY)/, $(ASM_SOURCE_FILE_NAMES:.s=.o) )
+include $(TEMPLATE_PATH)/Makefile.common
+$(foreach target, $(TARGETS), $(call define_target, $(target)))
+-include $(foreach target, $(TARGETS), $($(target)_dependencies))
 
-vpath %.c $(C_PATHS)
-vpath %.s $(ASM_PATHS)
-
-OBJECTS = $(C_OBJECTS) $(ASM_OBJECTS)
-
-ruuvitag_b3_eddystone: OUTPUT_FILENAME := ruuvitag_b3_eddystone
-ruuvitag_b3_eddystone: LINKER_SCRIPT=experimental_ble_app_eddystone_gcc_nrf52.ld
-
-ruuvitag_b3_eddystone: $(BUILD_DIRECTORIES) $(OBJECTS)
-	@echo Linking target: $(OUTPUT_FILENAME).out
-	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -lm -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
-	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e finalize
-
-## Create build directories
-$(BUILD_DIRECTORIES):
-	echo $(MAKEFILE_NAME)
-	$(MK) $@
-
-# Create objects from C SRC files
-$(OBJECT_DIRECTORY)/%.o: %.c
-	@echo Compiling file: $(notdir $<)
-	$(NO_ECHO)$(CC) $(CFLAGS) $(INC_PATHS) -c -o $@ $<
-
-# Assemble files
-$(OBJECT_DIRECTORY)/%.o: %.s
-	@echo Assembly file: $(notdir $<)
-	$(NO_ECHO)$(CC) $(ASMFLAGS) $(INC_PATHS) -c -o $@ $<
-# Link
-$(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out: $(BUILD_DIRECTORIES) $(OBJECTS)
-	@echo Linking target: $(OUTPUT_FILENAME).out
-	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -lm -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
-## Create binary .bin file from the .out file
-$(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin: $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
-	@echo Preparing: $(OUTPUT_FILENAME).bin
-	$(NO_ECHO)$(OBJCOPY) -O binary $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin
-
-## Create binary .hex file from the .out file
-$(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex: $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
-	@echo Preparing: $(OUTPUT_FILENAME).hex
-	$(NO_ECHO)$(OBJCOPY) -O ihex $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
-
-finalize: genbin genhex echosize
-
-genbin:
-	@echo Preparing: $(OUTPUT_FILENAME).bin
-	$(NO_ECHO)$(OBJCOPY) -O binary $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin
-
-## Create binary .hex file from the .out file
-genhex: 
-	@echo Preparing: $(OUTPUT_FILENAME).hex
-	$(NO_ECHO)$(OBJCOPY) -O ihex $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
-echosize:
-	-@echo ''
-	$(NO_ECHO)$(SIZE) $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
-	-@echo ''
-
-clean:
-	$(RM) $(BUILD_DIRECTORIES)
-
-cleanobj:
-	$(RM) $(BUILD_DIRECTORIES)/*.o
-flash: ruuvitag_b3_eddystone
-	@echo Flashing: $(OUTPUT_BINARY_DIRECTORY)/$<.hex
-	nrfjprog --program $(OUTPUT_BINARY_DIRECTORY)/$<.hex -f nrf52  --sectorerase
-	nrfjprog --reset -f nrf52
-
-## Flash softdevice
-flash_softdevice:
-	@echo Flashing: s132_nrf52_2.0.0_softdevice.hex
-	nrfjprog --program $(SDK)/components/softdevice/s132/hex/s132_nrf52_2.0.0_softdevice.hex -f nrf52 --chiperase
+# Flash the program
+flash: $(OUTPUT_DIRECTORY)/ruuvitag_b3_bootloader.hex
+	@echo Flashing: $<
+	nrfjprog --program $< -f nrf52 --chiperase
 	nrfjprog --reset -f nrf52
