Port eddystone url example

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ nRF5_SDK_11.0.0_89a8197
 nRF5_SDK_11.0.0_89a8197.zip
 nRF5_SDK_12.0.0_12f24da
 nRF5_SDK_12.0.0_12f24da.zip
+nRF5_SDK_12.1.0_0d23e2a
+nRF5_SDK_12.1.0_0d23e2a.zip
