Move init files under board specific folders

--- a/ruuvi_examples/template_app/ruuvitag_b3/s132/armgcc/Makefile
+++ b/ruuvi_examples/template_app/ruuvitag_b3/s132/armgcc/Makefile
@@ -9,6 +9,7 @@ $(OUTPUT_DIRECTORY)/template_application.out: \
   LINKER_SCRIPT  := template_application.ld
 # Source files common to all targets
 SRC_FILES += \
+  ../init.c \
   $(PROJ_DIR)/../../bsp/bsp.c \
   $(PROJ_DIR)/../../drivers/bme280/bme280.c \
   $(PROJ_DIR)/../../drivers/LIS2DH12/LIS2DH12.c \
@@ -17,7 +18,6 @@ SRC_FILES += \
   $(PROJ_DIR)/../../libraries/bluetooth/bluetooth_core.c \
   $(PROJ_DIR)/../../libraries/bluetooth/eddystone.c \
   $(PROJ_DIR)/main.c \
-  $(PROJ_DIR)/init.c \
   $(SDK_ROOT)/components/libraries/button/app_button.c \
   $(SDK_ROOT)/components/ble/common/ble_advdata.c \
   $(SDK_ROOT)/components/ble/common/ble_conn_params.c \
@@ -51,8 +51,8 @@ SRC_FILES += \
 
 # Include folders common to all targets
 INC_FOLDERS += \
+   ../ \
    ../config \
-  $(PROJ_DIR) \
   $(PROJ_DIR)/../../bsp \
   $(PROJ_DIR)/../../drivers/bme280 \
   $(PROJ_DIR)/../../drivers/LIS2DH12 \
