--- a/ruuvi_examples/test_drivers/ruuvitag_b3/s132/armgcc/Makefile
+++ b/ruuvi_examples/test_drivers/ruuvitag_b3/s132/armgcc/Makefile
@@ -2,7 +2,7 @@ PROJECT_NAME     := test_drivers_ruuvitag_b3_s132
 TARGETS          := test_drivers
 OUTPUT_DIRECTORY := _build
 
-SDK_ROOT := ../../../../../nRF5_SDK_12.1.0_0d23e2a
+SDK_ROOT := ../../../../../nRF5_SDK_12.2.0_f012efa
 PROJ_DIR := ../../..
 
 $(OUTPUT_DIRECTORY)/test_drivers.out: \
@@ -33,6 +33,9 @@ SRC_FILES += \
   $(SDK_ROOT)/components/toolchain/system_nrf52.c \
   $(SDK_ROOT)/components/softdevice/common/softdevice_handler/softdevice_handler.c \
   $(PROJ_DIR)/../../bsp/bsp.c \
+  $(PROJ_DIR)/../../bsp/bsp_btn_ble.c \
+  $(PROJ_DIR)/../../bsp/bsp_nfc.c \
+  $(PROJ_DIR)/../../bsp/boards.c \
   $(PROJ_DIR)/../../drivers/spi/spi.c \
   $(PROJ_DIR)/../../drivers/LIS2DH12/LIS2DH12.c \
   $(PROJ_DIR)/../../drivers/bme280/bme280.c \
